更新双token认证
