# server/docs/swagger.json
@@ -216,7 +216,7 @@
                     "200": {
                         "description": "成功更新用户信息",
                         "schema": {
-                            "$ref": "#/definitions/handle.loginUser"
+                            "$ref": "#/definitions/handle.response"
                         }
                     },
                     "400": {
@@ -264,6 +264,20 @@
             "properties": {
                 "password": {
                     "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "handle.response": {
+            "type": "object",
+            "properties": {
+                "auth_token": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "username": {
                     "type": "string"
